Success! Able to loop through latest survey responses and post all new members to seven different mailchimp lists

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "~4.15.5",
     "mailchimp-api-js": "^0.1.0",
     "mailchimp-api-v3": "^1.8.0",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2"
   }
 }
