--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "babel": "babel src -d lib",
-    "bundle": "webpack lib/integrations.js bundle/integrations.js"
+    "build": "babel src -d lib"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
@@ -15,9 +14,6 @@
     "debug": "~2.6.9",
     "dotenv": "^4.0.0",
     "express": "~4.15.5",
-    "mailchimp-api-js": "^0.1.0",
-    "mailchimp-api-v3": "^1.8.0",
-    "request": "^2.83.0",
-    "request-promise": "^4.2.2"
+    "request": "^2.83.0"
   }
 }
