--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "debug": "~2.6.9",
     "dotenv": "^4.0.0",
     "express": "~4.15.5",
+    "fs": "0.0.1-security",
+    "google-auth-library": "^1.1.0",
+    "googleapis": "^25.0.0",
     "request": "^2.83.0"
   }
 }
