--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fs": "0.0.1-security",
     "google-auth-library": "^1.1.0",
     "googleapis": "^25.0.0",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2"
   }
 }
